fix: added more gridgap

--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -42,7 +42,7 @@ footer {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
   grid-auto-rows: minmax(30vw, 160px);
-  grid-gap: 0.5em;
+  grid-gap: 12px;
 }
 
 .items img {
